--- a/index.html
+++ b/index.html
@@ -4,9 +4,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="timer" id="timer-1">
+
+    <div class="container">
+      <h1>Счетчик обратного отсчета</h1>
+      <h2>До праздника осталось</h2>
         <div class="field">
           <span class="value" data-value="days">11</span>
           <span class="label">Days</span>
@@ -26,6 +31,7 @@
           <span class="value" data-value="secs">11</span>
           <span class="label">Seconds</span>
         </div>
+      </div>
       </div>
     <script src="timer.js"></script>
 </body>
